2006-03-14  Alexander Malysh <amalysh at kannel.org>
  * gwlib/octstr.c: Fixed #323.
    Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.

2006-03-14  Alexander Malysh <amalysh at kannel.org>
  * gw/heartbeat.c: fixed #320 that heartbeat_stop crashed when no heartbeat
    at all is activated.
    Thanks to Rene Kluwen <rene.kluwen at chimit.nl> for provided patch.

2006-03-14  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smpp_pdu.def: fixed #317. SMPP v3.4 defines that validity_period
    and schedule_delivery_time unused in deliver_sm but SMPP v3.3 states that
    parameters for the deliver_sm are the same as for submit_sm. So make length
    of validity_period and schedule_delivery_time 17 as for submit_sm. It doesn't
    break SMPP v3.4 clients because these values are NULTERMINATED.

2006-03-14  Alexander Malysh <amalysh at kannel.org>
  * gwlib/mime.[ch]: minimal additional patch for the mime module, to allow
    client/user access to the start element.
    Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for provided patch.

2006-03-05  Alexander Malysh <amalysh at kannel.org>
  * gwlib/conn.[ch]: added new function 'use_global_trusted_ca_file' that
    allow setting of global trusted ca w/o a need to call conn_config_ssl.
  * gwlib/mime.[ch]: hide MIMEEntity struct and don't allow direct values
    manipulation. Manipulation allowed only through access functions.
    Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for provided patch.
    [Msg-Id: <963281CE-055B-4254-96D6-9DDE6FAC8F30@dsmagic.com>]

2006-03-05  Alexander Malysh <amalysh at kannel.org>
  * gwlib/http.[ch]: allows http_receive_result to be non blocking if requested.
    This allow us to start only one thread for http client side.

2006-03-05  Alexander Malysh <amalysh at kannel.org>
  * configure, configure.in, gw-config.h.in, gwlib/conn.c, gwlib/gw-prioqueue.c,
    gwlib/gwmem-check.c, gwlib/http.c: replaced '__inline' which is GCC extention